Fix CMake option name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 
 project(muslots)
 
-option(MUSLOTS_TEST "Build example" OFF)
+option(MUSLOTS_EXAMPLE "Build example" OFF)
 
 set(CMAKE_CXX_STANDARD 20)
 
